--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
   <div class="container">
     <h1>Ris</h1>
-    <button>Clicca qui</button>
+    <br>
+    <button>Paga</button>
   </div>
 </body>
 </html>
